refactoring classes services and controller